add segment bucket

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,8 @@
 {{#if model.user}}
   <p>Hello {{model.user.displayName}}</p>
+  {{model.user.token}}
 {{else}}
   <p>{{#link-to 'login'}}<img src="assets/images/ConnectWithStrava2x.png" alt="log in with strava button">{{/link-to}}</p>
 {{/if}}
+<br>
+{{#link-to 'starred'}}your starred segments{{/link-to}}
