add a table to display starred routes added to the race

--- a/app/templates/components/segment-tile.hbs
+++ b/app/templates/components/segment-tile.hbs
@@ -1,3 +1,4 @@
 <div class="segment-item">
-  <button {{action 'addToRace' segment}}>Add</button>{{segment.name}}
+  <li>{{segment.name}}<br><button {{action 'addToRace' segment}}>Add</button></li>
+
 </div>
