add a button to each row of the race-bucket display table which allows the user to remove segments they've added from the race

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -16,6 +16,17 @@ tr:nth-child(1):hover {
 
 th {
   text-align: left;
-  border-bottom-style: double;
+  /*border-bottom-style: double;*/
   margin-right: 40px;
+}
+
+th div, td div {
+  margin-right: 2em;
+}
+
+button {
+  cursor: pointer;
+}
+.headerDiv {
+  border-bottom-style: double;
 }
