make it so user cannot add a segment to a race which already has that segment

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -16,7 +16,7 @@ tr:nth-child(1):hover {
 
 th {
   text-align: left;
-  /*border-bottom-style: double;*/
+  border-bottom-style: double;
   margin-right: 40px;
 }
 
