add init script

--- a/app/templates/components/race-bucket-display.hbs
+++ b/app/templates/components/race-bucket-display.hbs
@@ -13,4 +13,6 @@
       </tr>
     {{/each}}
   </table>
+  {{input value=name id="name"}}
+  <button class="" {{action 'createRace'}}>Create Race</button>
 {{/if}}
