--- a/app/templates/starred.hbs
+++ b/app/templates/starred.hbs
@@ -3,7 +3,7 @@
   <br>
 {{/each}}
 <br>
-{{race-bucket-display class='race-bucket-display'}}
+{{race-bucket-display class='race-bucket-display' createRace='createRace'}}
 
 {{outlet}}
 {{#link-to 'index'}}home{{/link-to}}
