--- a/app/templates/components/segment-tile.hbs
+++ b/app/templates/components/segment-tile.hbs
@@ -1,4 +1,4 @@
 <div class="segment-item">
-  <li>{{segment.name}}<br><button {{action 'addToRace' segment}}>Add</button></li>
+<p><button class="btn-secondary btn-sm" {{action 'addToRace' segment}}>Add</button> {{segment.name}}</p>
 
 </div>
