--- a/app/templates/races.hbs
+++ b/app/templates/races.hbs
@@ -1,6 +1,6 @@
 <h2>what race would you like to join?</h2>
 <ul>
-  {{#each model as |race|}}
-    {{race-tile race=race}}
+  {{#each model.races as |race|}}
+    {{race-tile race=race enterRace='enterRace'}}
   {{/each}}
 </ul>
