--- a/app/templates/races.hbs
+++ b/app/templates/races.hbs
@@ -1,5 +1,5 @@
 <h2>what race would you like to join?</h2>
-<ul>
+<ul class="race-list">
   {{#each model as |race|}}
     {{race-tile race=race}}
   {{/each}}
