--- a/app/templates/components/nav-bar.hbs
+++ b/app/templates/components/nav-bar.hbs
@@ -13,7 +13,17 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           {{#if model.user}}
-          <li>{{#link-to 'starred'}}New Race{{/link-to}}</li>
+          <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Race<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-header">My Races</li>
+                  <li>{{#link-to 'starred'}}Create{{/link-to}}</li>
+                  <li><a href="#">View</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-header">Other Races</li>
+                  <li>{{#link-to 'races'}}Join{{/link-to}}</li>
+                </ul>
+              </li>
           {{/if}}
         </ul>
         <ul class="nav navbar-nav navbar-right">
