fix segment to return promise

--- a/app/templates/segment.hbs
+++ b/app/templates/segment.hbs
@@ -1,5 +1,5 @@
 Segments Page:
 {{log model}}
-{{#each model.segments as |segment|}}
+{{#each model as |segment|}}
   {{segment-listitem segment=segment}}
 {{/each}}
