--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -108,6 +108,14 @@
   font-weight: bold;
 }
 
+.g-map{
+  height: 100%;
+}
+.g-map-canvas {
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #ffae89;
