--- a/app/templates/components/nav-bar.hbs
+++ b/app/templates/components/nav-bar.hbs
@@ -18,7 +18,7 @@
                 <ul class="dropdown-menu">
                   <li class="dropdown-header">My Races</li>
                   <li>{{#link-to 'starred'}}Create{{/link-to}}</li>
-                  <li><a href="#">View</a></li>
+                  <li>{{#link-to 'myraces'}}View{{/link-to}}</li>
                   <li role="separator" class="divider"></li>
                   <li class="dropdown-header">Other Races</li>
                   <li>{{#link-to 'races'}}Join{{/link-to}}</li>
