add a racedetail route and add the user service update functionality to the application route to fix the bug where refreshing any route besides the index route sets the current user to Matt Giem

--- a/app/templates/components/my-races-lists.hbs
+++ b/app/templates/components/my-races-lists.hbs
@@ -1,5 +1,6 @@
-{{#each races as |race|}}
-  <li>{{race.name}}, by {{race.creatorId}}</li>
-{{/each}}
-
+<ul>
+  {{#each races as |race|}}
+    <li>{{#link-to 'racedetail' race.id}}{{race.name}}{{/link-to}}, by {{race.creatorId}}{{race.id}}</li>
+  {{/each}}
+</ul>
 {{userId}}
