--- a/app/templates/myraces.hbs
+++ b/app/templates/myraces.hbs
@@ -3,4 +3,4 @@
 <h2>list of races you're racing in</h2>
 {{my-races-lists races=model.currentUser.races}}
 <h2>list of races you created</h2>
-{{my-races-lists races=model.racesByCurrentUser}}
+{{my-created-race-list races=model.racesByCurrentUser delete="delete"}}
