allow a user to leave a race.

--- a/app/templates/myraces.hbs
+++ b/app/templates/myraces.hbs
@@ -1,6 +1,6 @@
 {{log model.currentUser}}
 {{model.currentUser.userid}}
 <h2>list of races you're racing in</h2>
-{{my-races-lists races=model.currentUser.races}}
+{{my-races-lists races=model.currentUser.races leave="leave"}}
 <h2>list of races you created</h2>
 {{my-created-race-list races=model.racesByCurrentUser delete="delete"}}
