--- a/app/templates/components/my-races-lists.hbs
+++ b/app/templates/components/my-races-lists.hbs
@@ -1,6 +1,7 @@
 <ul>
   {{#each races as |race|}}
-    <li>{{#link-to 'racedetail' race.id}}{{race.name}}{{/link-to}}, by {{race.creatorId}}{{race.id}}</li>
+    <li>{{#link-to 'racedetail' race.id}}{{race.name}}{{/link-to}}, by {{race.creatorId}}{{race.id}} <button class="btn-warning btn-sm"{{action 'leave' race}}>Leave Race</button>
+    </li>
   {{/each}}
 </ul>
 {{userId}}
