enable users to leave races after entering them; enable users who have created races to delete those races

--- a/app/templates/races.hbs
+++ b/app/templates/races.hbs
@@ -4,3 +4,5 @@
     {{race-tile race=race enterRace='enterRace'}}
   {{/each}}
 </ul>
+<h2>races you've joined</h2>
+{{my-races-lists races=model.currentUser.races}}
