style the add race page

--- a/app/templates/components/segment-tile.hbs
+++ b/app/templates/components/segment-tile.hbs
@@ -1,4 +1,4 @@
-<div class="segment-item">
-<p><button class="btn-secondary btn-sm" {{action 'addToRace' segment}}>Add</button>{{segment.name}}</p>
-
+<div class="segment-item col-lg-4 col-sm-6">
+<img id="icon" src="assets/images/strava.jpeg" alt="strava icon" {{action 'addToRace' segment}} /> {{segment.name}}
+<hr>
 </div>
