--- a/app/templates/myraces.hbs
+++ b/app/templates/myraces.hbs
@@ -1,5 +1,4 @@
-{{log model.currentUser}}
-{{model.currentUser.userid}}
+<h2>{{model.userName}}</h2>
 <h2>list of races you're racing in</h2>
 {{my-races-lists races=model.currentUser.races leave="leave"}}
 <h2>list of races you created</h2>
