--- a/app/templates/segment.hbs
+++ b/app/templates/segment.hbs
@@ -1,5 +1,4 @@
-Segments Page:
-{{log model}}
+<h1>Race segments:</h1>
 {{#each model as |segment|}}
   {{segment-listitem segment=segment}}
 {{/each}}
