--- a/app/templates/components/race-page.hbs
+++ b/app/templates/components/race-page.hbs
@@ -1,18 +1,19 @@
 <div class="race-page">
   <h1>{{race.name}}</h1>
-  <h3>Starts: {{race.start}}</h3>
-  <h3>Ends: {{race.end}}</h3>
-  <h4>Created By {{race.creatorId}}</h4>
+  <h3>Starts: {{moment-calendar drace.start}}</h3>
+  <h3>Ends: {{moment-calendar race.end}}</h3>
+  <h3>Race will be over {{moment-from-now race.end}}</h3>
+  <h4>Created By {{race.creatorName}}</h4>
   <h4>Participants:</h4>
   <ul>
     {{#each race.users as |user|}}
-      <li>{{user.userid}}</li>
+      <li>{{user.userName}}</li>
     {{/each}}
   </ul>
   <h4>Segments</h4>
   <ul>
     {{#each race.segments as |segment|}}
-      <li>{{segment.ssegid}}</li>
+      <li>{{segment.segmentName}}</li>
     {{/each}}
   </ul>
 </div>
