--- a/app/templates/components/race-page.hbs
+++ b/app/templates/components/race-page.hbs
@@ -1,5 +1,6 @@
 <div class="race-page">
   <h1>{{race.name}}</h1>
+
   <h3>Starts: {{moment-calendar drace.start}}</h3>
   <h3>Ends: {{moment-calendar race.end}}</h3>
   <h3>Race will be over {{moment-from-now race.end}}</h3>
@@ -11,6 +12,7 @@
     {{/each}}
   </ul>
   <h4>Segments</h4>
+  <h5><a href="/races/{{race.id}}/segment">View Segment Details</a></h5>
   <ul>
     {{#each race.segments as |segment|}}
       <li>{{segment.segmentName}}</li>
